--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-    <head>
-        <meta charset="utf-8">
-        <title>Utility Methods</title>
-    </head>
-    <body>
-        <h1></h1>  
+
+<head>
+    <meta charset="utf-8">
+    <title>Utility Methods</title>
+</head>
+
+<body>
+    <h1 th:text="${#strings.contains(menu, 'bubble tea')} ? 'Item in stock' : 'We do not have this item for sale'"></h1>
     </body>
+
 </html>
